2006-07-04  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-itmedia.el (shimbun-itmedia-group-alist):
	Add bizid group.

2006-06-30  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* shimbun/sb-itmedia.el (shimbun-itmedia): Don't inherit shimbun.
	(shimbun-from-address): Fix typo.
	
2006-06-29  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-itmedia.el: Require sb-rss.
	(shimbun-itmedia): Derived from shimbun-rss.
	(shimbun-itmedia-url): Remove.
	(shimbun-itmedia-group-alist): Rewrite.
	(shimbun-itmedia-server-name): Remove.
	(shimbun-itmedia-from-address): Remove.
	(shimbun-itmedia-x-face-alist): Add x-face for the +D groups.
	(shimbun-from-address): New overridden method.
	(shimbun-index-url): Rewrite.
	(shimbun-headers): New overridden method.
	(shimbun-get-headers): Remove.
	(shimbun-itmedia-anchordesk-get-headers): New function.

	* shimbun/sb-itmedia+D.el: Remove.

2006-06-21  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-yahoo-auctions.el (shimbun-rss-build-message-id):
	Revival.

2006-06-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-tabmenu.el (w3m-tab-menubar-make-items-precbuf): New
	internal variable.
	(w3m-tab-menubar-make-items-prebuflst): Ditto.
	(w3m-tab-menubar-make-items-preurl): Ditto.
	(w3m-tab-menubar-make-items-preitems): Ditto.
	(w3m-tab-menubar-make-items): Set an use previous variables to
	used for the speed improvement.

	* w3m-util.el (w3m-make-menu-commands-keys): New internal
	variable.
	(w3m-make-menu-commands): Set and use
	`w3m-make-menu-commands-keys to used for the speed improvement.

2006-06-18  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-excite.el (shimbun-rss-build-message-id): Add new
	method.

	* shimbun/sb-slashdot-jp.el (shimbun-rss-build-message-id): Revert
	previouse removal.

2006-06-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* attic/rfc2368.el: Copy from Emacs 22; modify
	rfc2368-unhexify-string to work with both Emacs and XEmacs.

2006-06-06  Katsumi Yamaoka  <yamaoka@jpl.org>
